--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,22 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# data
+*.csv
+*.txt
+*.json
+*.pkl
+*.h5
+*.npy
+*.npz
+*.zip
+*.gz
+*.tar
+*.tar.gz
+*.tgz
+*.bz2
+*.tbz2
+*.z
+*.xlsx
+*.xls
